# ScrubChef

./: .gitignore  README.md
.github/workflows/: deploy.yml
engine/: Cargo.toml
engine/src/: lib.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: AuraBackground.tsx  DiffView.tsx  FileUpload.tsx  PipelineStep.tsx  StepConfig.tsx  Token.tsx
ui/src/data/: exampleRecipes.ts
ui/src/utils/: engineWorker.ts  pipelineSerializer.ts  sidecarGenerator.ts
