[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
regex = "1.10"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }
